--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -10,12 +10,12 @@
         android:id="@+id/playerScoreTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         android:text="@string/score"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
-        app:layout_constraintEnd_toStartOf="@+id/vertical33"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/vertical33"
+        app:layout_constraintTop_toBottomOf="@+id/topScoreTV" />
 
     <Button
         android:id="@+id/highScoreButton"
@@ -26,26 +26,26 @@
         android:text="@string/high_score"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vertical33"
-        app:layout_constraintTop_toTopOf="@+id/horizontal95" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/mainMenuButton"
         android:layout_width="115dp"
         android:layout_height="wrap_content"
-        android:onClick="mainMenu"
         android:background="@color/darkRed"
+        android:onClick="mainMenu"
         android:padding="10dp"
         android:text="@string/main_menu"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/vertical33"
-        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/horizontal95" />
+        app:layout_constraintTop_toTopOf="@+id/horizontal95"
+        app:layout_constraintVertical_bias="0.377" />
 
     <Button
         android:id="@+id/bottomRightButton"
@@ -55,7 +55,7 @@
         app:layout_constraintBottom_toTopOf="@+id/horizontal95"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vertical33"
-        app:layout_constraintTop_toTopOf="@+id/horizontal50" />
+        app:layout_constraintTop_toTopOf="@+id/horizontal38" />
 
     <Button
         android:id="@+id/bottomLeftButton"
@@ -66,17 +66,17 @@
         app:layout_constraintBottom_toTopOf="@+id/horizontal95"
         app:layout_constraintEnd_toStartOf="@+id/vertical33"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/horizontal50" />
+        app:layout_constraintTop_toTopOf="@+id/horizontal38" />
 
     <Button
         android:id="@+id/topRightButton"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal50"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal38"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vertical33"
-        app:layout_constraintTop_toTopOf="@+id/horizontal25" />
+        app:layout_constraintTop_toTopOf="@+id/horizontal20" />
 
     <Button
         android:id="@+id/playButton"
@@ -87,7 +87,7 @@
         android:text="@string/play_again"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vertical33"
         app:layout_constraintTop_toTopOf="@+id/horizontal12" />
@@ -97,51 +97,38 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal50"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal38"
         app:layout_constraintEnd_toStartOf="@+id/vertical33"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/horizontal25"
+        app:layout_constraintTop_toTopOf="@+id/horizontal20"
         app:layout_constraintVertical_bias="0.507" />
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:contentDescription="@string/ls_masters_logo"
-        app:layout_constraintBottom_toTopOf="@+id/topScoreTV"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal20"
         app:layout_constraintEnd_toStartOf="@+id/vertical33"
+        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/main_logo" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal50"
+        android:id="@+id/horizontal38"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.55" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal25"
+        android:id="@+id/horizontal20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.25" />
-
-    <Button
-        android:id="@+id/howToPlayButton"
-        android:layout_width="115dp"
-        android:layout_height="wrap_content"
-        android:background="@color/darkRed"
-        android:padding="10dp"
-        android:text="@string/how_to_play"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vertical33"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal95"
@@ -168,12 +155,12 @@
         android:id="@+id/topScoreTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         android:text="@string/top_score"
-        app:layout_constraintBottom_toTopOf="@+id/playerScoreTV"
-        app:layout_constraintEnd_toStartOf="@+id/vertical33"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/vertical33"
+        app:layout_constraintTop_toTopOf="@+id/horizontal95" />
 
     <TextView
         android:id="@+id/messageTV"
@@ -187,6 +174,6 @@
         app:layout_constraintBottom_toTopOf="@+id/horizontal95"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/horizontal25"
+        app:layout_constraintTop_toTopOf="@+id/horizontal20"
         app:layout_constraintVertical_bias="0.502" />
 </androidx.constraintlayout.widget.ConstraintLayout>
