--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,7 +11,6 @@
         android:id="@+id/playClassicButton"
         android:layout_width="125dp"
         android:layout_height="50dp"
-        android:layout_below="@id/classicLogoImageView"
         android:layout_marginTop="10dp"
         android:background="@color/darkBlue"
         android:padding="10dp"
@@ -27,7 +26,6 @@
         android:id="@+id/playRewindButton"
         android:layout_width="125dp"
         android:layout_height="50dp"
-        android:layout_below="@id/rewindLogoImageView"
         android:layout_marginTop="10dp"
         android:background="@color/darkGreen"
         android:padding="10dp"
@@ -43,7 +41,6 @@
         android:id="@+id/playSurpriseButton"
         android:layout_width="125dp"
         android:layout_height="50dp"
-        android:layout_below="@id/surpriseLogoImageView"
         android:layout_marginTop="10dp"
         android:background="@color/darkRed"
         android:padding="10dp"
@@ -64,7 +61,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/horizontal20"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/vertical66"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,8 +81,6 @@
         android:id="@+id/surpriseLogoImageView"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_below="@id/textView"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:layout_toEndOf="@id/rewindLogoImageView"
         android:contentDescription="@string/ls_surprise_logo"
@@ -143,7 +138,6 @@
         android:id="@+id/surpriseInstructionsButton"
         android:layout_width="125dp"
         android:layout_height="50dp"
-        android:layout_below="@id/surpriseLogoImageView"
         android:layout_marginTop="5dp"
         android:background="@color/darkRed"
         android:onClick="onClick"
@@ -155,6 +149,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vertical66"
         app:layout_constraintTop_toBottomOf="@+id/playSurpriseButton" />
+
+    <TextView
+        android:id="@+id/viewCreditsTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="@string/view_credits"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/vertical66"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal20"
