--- a/app/src/main/res/layout-land/surprise_instructions.xml
+++ b/app/src/main/res/layout-land/surprise_instructions.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightGray">
@@ -11,7 +12,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="15dp"
         android:contentDescription="@string/ls_surprise_logo"
-        app:layout_constraintEnd_toStartOf="@+id/vertical35"
+        app:layout_constraintEnd_toStartOf="@+id/objectTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/surprise_logo" />
@@ -21,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
-        android:background="@color/darkBlue"
+        android:background="@color/darkRed"
         android:gravity="center"
         android:padding="15dp"
         android:text="@string/object_of_game"
@@ -30,7 +31,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/horizontal30"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vertical35"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -44,17 +45,23 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/horizontal30"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@id/horizontal30" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical35"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.35" />
+    <Button
+        android:id="@+id/mainMenuButton"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
+        android:background="@color/darkRed"
+        android:onClick="mainMenu"
+        android:padding="10dp"
+        android:text="@string/main_menu"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal30"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/objectTV"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal30"
